Fixed vertical spacing of code

--- a/css/webots-doc.css
+++ b/css/webots-doc.css
@@ -140,14 +140,17 @@
   background-color: #e8f4ff;
   overflow-x: auto;
   font-size: 16px;
+  line-height:20px;
 }
 .webots-doc code {
   padding: 0;
   background: transparent;
   color: #444;
   font-size: 16px;
-  line-height: 18px;
   overflow-y: hidden;
+}
+.webots-doc p > code {
+  line-height:18px;
 }
 .webots-doc h1,
 .webots-doc h2,
